oracle/uptime-kuma/uptime-kuma-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: ../../kompose convert -f ./docker-compose.yaml
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: uptime-kuma
  name: uptime-kuma
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: uptime-kuma
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: ../../kompose convert -f ./docker-compose.yaml
        kompose.version: 1.28.0 (c4137012e)
      creationTimestamp: null
      labels:
        io.kompose.network/uptime-kuma-default: "true"
        io.kompose.service: uptime-kuma
    spec:
      containers:
        - image: louislam/uptime-kuma:1
          name: uptime-kuma
          ports:
            - containerPort: 3001
          resources: {}
          volumeMounts:
            - mountPath: /app/data
              name: uptime-kuma-claim0
      restartPolicy: Always
      volumes:
        - name: uptime-kuma-claim0
          persistentVolumeClaim:
            claimName: uptime-kuma-claim0
status: {}
